tests/data/placebo/test_cidr_size_egress/ec2.AuthorizeSecurityGroupEgress_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "HTTPStatusCode": 200, 
            "RequestId": "de410f02-7d38-44ff-844b-b3daf7eee112", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 30 Aug 2016 19:22:16 GMT"
            }
        }
    }
}
