tests/data/placebo/test_cidr_size_egress/ec2.CreateSecurityGroup_1.json
{
    "status_code": 200, 
    "data": {
        "GroupId": "sg-ca0db5b0", 
        "ResponseMetadata": {
            "HTTPStatusCode": 200, 
            "RequestId": "ceea0714-3b24-436e-b8c9-8b35ba698ebc", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 30 Aug 2016 19:22:16 GMT"
            }
        }
    }
}
