tests/data/placebo/test_cidr_size_egress/ec2.CreateVpc_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "HTTPStatusCode": 200, 
            "RequestId": "61b94316-067c-4169-8178-89c3dcb20f94", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 06 Sep 2016 20:20:51 GMT"
            }
        }, 
        "Vpc": {
            "VpcId": "vpc-ed40178a", 
            "InstanceTenancy": "default", 
            "State": "pending", 
            "DhcpOptionsId": "dopt-24ff1940", 
            "CidrBlock": "10.42.0.0/16", 
            "IsDefault": false
        }
    }
}
