tests/data/placebo/test_cidr_size_egress/ec2.DeleteSecurityGroup_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "HTTPStatusCode": 200, 
            "RequestId": "60377421-4629-40fa-85df-b74e8a5854b5", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 30 Aug 2016 19:22:17 GMT"
            }
        }
    }
}
