tests/data/placebo/test_cidr_size_egress/ec2.DeleteVpc_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "HTTPStatusCode": 200, 
            "RequestId": "7c82ca39-42fd-4852-aa77-f269897a573a", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 06 Sep 2016 20:20:53 GMT"
            }
        }
    }
}
