tests/data/placebo/test_cidr_size_egress/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200, 
    "data": {
        "SecurityGroups": [
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "PrefixListIds": []
                    }
                ], 
                "Description": "default VPC security group", 
                "IpPermissions": [
                    {
                        "IpProtocol": "-1", 
                        "IpRanges": [
                            {
                                "CidrIp": "108.56.181.242/32"
                            }
                        ], 
                        "UserIdGroupPairs": [
                            {
                                "UserId": "644160558196", 
                                "GroupId": "sg-6c7fa917"
                            }
                        ], 
                        "PrefixListIds": []
                    }
                ], 
                "GroupName": "default", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-6c7fa917"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "PrefixListIds": []
                    }
                ], 
                "Description": "default VPC security group", 
                "IpPermissions": [
                    {
                        "IpProtocol": "-1", 
                        "IpRanges": [], 
                        "UserIdGroupPairs": [
                            {
                                "UserId": "644160558196", 
                                "GroupId": "sg-d50db5af"
                            }
                        ], 
                        "PrefixListIds": []
                    }
                ], 
                "GroupName": "default", 
                "VpcId": "vpc-33bff054", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-d50db5af"
            }, 
            {
                "IpPermissionsEgress": [], 
                "Description": "launch-wizard-1 created 2016-08-23T18:37:34.124-04:00", 
                "IpPermissions": [], 
                "GroupName": "launch-wizard-1", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-eb0da091"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "PrefixListIds": []
                    }, 
                    {
                        "PrefixListIds": [], 
                        "FromPort": 443, 
                        "IpRanges": [
                            {
                                "CidrIp": "10.42.0.0/16"
                            }, 
                            {
                                "CidrIp": "10.42.1.0/24"
                            }
                        ], 
                        "ToPort": 443, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": []
                    }
                ], 
                "Description": "unnecessarily large egress CIDR rule", 
                "IpPermissions": [], 
                "GroupName": "wide-egress", 
                "VpcId": "vpc-33bff054", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-ca0db5b0"
            }
        ], 
        "ResponseMetadata": {
            "HTTPStatusCode": 200, 
            "RequestId": "c1eeb513-2946-4573-9119-b2076dffa2a8", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 30 Aug 2016 19:22:16 GMT"
            }
        }
    }
}
